fix: add @smilyspilly website responsive changes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -356,7 +356,7 @@ svg{
 /* Video Container */
 .videos-container{
   width: 100%;
-  padding: 20px 50px;
+  padding: 20px 25px;
   position: relative;
 }
 
@@ -396,6 +396,9 @@ svg{
   cursor: pointer;
   transition: 0.2s transform ease-in-out;
   transform: scale(1.15,1.15);
+  max-width: 100%;
+  max-height: 100%;
+
 }
 .box-1 img:hover {
   transform: scale(1.25,1.25);
@@ -409,14 +412,14 @@ svg{
 .section-title{
   text-transform: uppercase;
   font-family: 'Bangers', cursive;
-  font-size: 105px;
+  font-size: 9.558528vh;
   color: white;
   text-shadow: 5px 5px 1px rgba(0, 0, 0, 0.25);
   letter-spacing: 0.05em;
   position: relative;
 }
 .section-title p{
-  font-size: 80px;
+  font-size: 8.558528vh;
   font-family: 'Bangers', cursive;
   text-shadow: 5px 5px 1px rgba(0, 0, 0, 0.25);
 
@@ -480,7 +483,7 @@ svg{
 }
 
 /* Media Query (Mobile Pov)*/
-@media (max-width: 1362px){
+@media (max-width: 1262px){
   .servers-container{
     flex-direction: column;
   }
@@ -559,6 +562,12 @@ svg{
 }
 
 @media (max-width: 500px){
+  .section-title{
+    height: 55px !important;
+    width: 55px !important;
+  }
+
+
   .container{
     max-width: 95%;
     width: 95%;
@@ -620,10 +629,16 @@ svg{
   display: none;
 }
 
+/* Comp */
+.pr-2 {
+  padding-right: 2rem;
+} 
+.pl-2 {
+  padding-left: 2rem;
+}
 
 
 /* Container Colors */
-
 .color-2{
   background-color: #1B1B1B ;
 }
